Fixed the spacing

--- a/src/ui/components/auth/Auth.scss
+++ b/src/ui/components/auth/Auth.scss
@@ -44,6 +44,10 @@
 		margin-bottom: 8px;
 	}
 
+	.text-label {
+		margin-bottom: 16px;
+	}
+
 	label {
 		font-size: 14px;
 		font-weight: 500;
